[package]
name = "dobby"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version= "1", features = ["full"] }
warp = "0.3"
tonic = "0.8"
prost = "0.11"

[dev-dependencies]
tempfile = "3.3"

[build-dependencies]
tonic-build = "0.8"
