[package]
name = "dobby"
version = "0.1.0"
edition = "2021"

[[bin]]
# dobby daemon
path = "src/bin/server.rs"
name = "dobbyd"

[[bin]]
# dobby cli
path = "src/bin/client.rs"
name = "dobby"

[dependencies]
structopt = "0.3"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.15"
num = "0.4"

# TODO: feature-gate this
rusqlite = { version = "0.28", features = ["bundled", "column_decltype"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

tokio = { version= "1.24", features = ["rt-multi-thread", "signal"] }
warp = "0.3"
tonic = "0.8"
prost = "0.11"
juniper = "0.15"

rustyline = "10.0"
rustyline-derive = "0.7"
colored = "2.0"
prettytable-rs = "0.10"
juniper_warp = "0.7.0"

[dev-dependencies]
tempfile = "3.3"

[build-dependencies]
tonic-build = "0.8"
